--- a/frontend/pages/adventures/index.html
+++ b/frontend/pages/adventures/index.html
@@ -125,7 +125,7 @@
         (async function () {
 
             //Fetches the City from URL query param (here : window.location.search is an in-built browser property that returns the query param from URL, example: http://localhost:8081/?city=bengaluru => window.location.search would return "?city=bengaluru")
-            
+            console.log('hell')
             let city = await getCityFromURL(window.location.search);
            
 
@@ -134,6 +134,7 @@
 
             //Applies filters on the adventures list
             let filteredAdventures = filterFunction(adventures, filters);
+
             //Updates the filtered adventures list to the DOM
             addAdventureToDOM(filteredAdventures)
 
